assets/css/style.css
*{
    margin: 0;
    padding: 0px;
    box-sizing: border-box;
    list-style: none;
    font-family: sans-serif;
}

nav{
    background-color: orange;
    color: white;
    box-shadow: 0px 1px 10px grey;
    position: fixed;
    width: 100%;
    top: 0;
    z-index:2;
}

.flex{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.width{
    width: 80%;
    margin: auto;
}

.line-though{
    text-decoration: line-through;
    color: black;
}
.menu{
    padding: 20px 0;
}

.menu-left > li, .menu-right > li, .list li{
    padding: 0 10px;
    padding-left: 0;
}

.menu-left > li:hover{
    text-decoration: underline;
}

.allmain{
    flex-wrap: wrap;
    padding: 30px 0;
    margin-top: 100px;
}

.cards{
    flex-basis: calc(96%/3);
    margin-bottom: 20px;
}

.card{
    line-height: 0px;
    position: relative;
}

.card > img{
    max-width: 100%;
    object-fit: contain;
}

h3{
    font-size: 1.1rem;
}

h5{
    text-transform: uppercase;
    font-weight: bolder;
    font-size: 1.2rem;
}

h6{
    color: red;
}

.img-2{
    display: none;
}

.card:hover .img-1{
    display: none;
}

.card:hover .img-2{
    display: inline-block;
}

.heart{
    position: absolute;
    background-color: white;
    padding: 10px;
    top: 10px;
    right: 0px;
    font-size: 1.5rem;
}

.fa-heart:hover{
    color: red;
}

.discount{
    color: white;
    background-color: red;
    padding: 15px 10px;
    position: absolute;
    bottom: 30px;
    left: 0px;
    z-index: 1;
}

.green{
    color: white;
    background-color: green;
    padding: 15px 10px;
    position: absolute;
    bottom: 30px;
    left: 60px;
}

footer{
    background-color: black;
    color: white;
    padding: 30px 0;
}

.end{
    line-height: 40px;
}

.fa-brands{
    font-size: 1.4rem;
}

